.. -*- restructuredtext -*-

This file describes user-visible changes between the extension versions.


Version 0.3 (unreleased)
------------------------



Version 0.2 (2009-06-07)
------------------------

* Add ``aafig_default_options`` configuration option.
* Fix SVG output for HTML writer (this need aafigure r5978 or later).


Version 0.1 (2009-06-05)
------------------------

* Initial version.
