@@ -1,6 +1,6 @@
 Metadata-Version: 1.0
 Name: sphinxcontrib-aafig
-Version: 0.3dev-20090620
+Version: 0.3dev-20090622
 Summary: aafig Sphinx extension
 Home-page: http://bitbucket.org/birkenfeld/sphinx-contrib
 Author: Leandro Lucarella
@@ -13,7 +13,7 @@ Description:
         .. _aafigure: http://docutils.sourceforge.net/sandbox/aafigure/
         .. _Sphinx: http://sphinx.pocoo.org/
         
-        _aafigure is a program and a reStructuredText_ directive to allow embeded ASCII
+        aafigure_ is a program and a reStructuredText_ directive to allow embeded ASCII
         art figures to be rendered as nice images in various image formats. The
         aafigure_ directive needs a *hardcoded* image format, so it doesn't goes well
         with Sphinx_ multi-format support.
